# LOK_GEET

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LokGeet-report.md  README.md  pyproject.toml  system_prompt.txt  user_reviews.csv  user_reviews.json
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md
.gitlab/merge_request_templates/: Bug.md  Default.md  Documentation.md
app/: app.py  requirements.txt
